--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ncrypthic/doctrine-graphql-bundle": "^1.2",
+        "nelmio/cors-bundle": "^1.5",
         "ramsey/uuid-doctrine": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.3.*",
